--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,11 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Form</h1>
+<h1>注册</h1>
+<div id="userExisted" th:fragment="userExisted">
+    <h3>用户名已存在!</h3>
+</div>
 <form action="#" th:action="@{/user/register}" th:object="${user}" method="post">
     <p>用户名: <input type="text" th:field="*{username}" /></p>
-    <p>密码: <input type="text" th:field="*{hashedPassword}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <p>密码:   <input type="text" th:field="*{hashedPassword}" /></p>
+    <p><input type="submit" value="注册" /><input type="reset" value="重置" /></p>
 </form>
 </body>
 </html>
