hadoop换机器调试

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <h1 th:text="${user.getUsername()}">的网盘</h1>
-<p th:text="${user.getUsername()}" />
-<p th:text="${user.getHashedPassword()}" />
-<p th:text="${user.getAge()}" />
-<p th:text="${user.getUsedCapacity()}" />
-<p th:text="${user.getTotalCapacity()}" />
-<p th:text="${user.getAge()}" />
-<p th:text="${user.getGender()}" />
-<p th:text="${user.getBio()}" />
-<p th:text="${user.getAvatar()}" />
+<p th:text="${user.getUsername()}"></p>
+<p th:text="${user.getHashedPassword()}"></p>
+<p th:text="${user.getAge()}"></p>
+<p th:text="${user.getUsedCapacity()}"></p>
+<p th:text="${user.getTotalCapacity()}"></p>
+<p th:text="${user.getAge()}"></p>
+<p th:text="${user.getGender()}"></p>
+<p th:text="${user.getBio()}"></p>
+<p th:text="${user.getAvatar()}"></p>
 </body>
 </html>
