--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,9 +10,20 @@
     <h3>用户名已存在!</h3>
 </div>
 <form action="#" th:action="@{/user/register}" th:object="${user}" method="post">
-    <p>用户名: <input type="text" th:field="*{username}" /></p>
-    <p>密码:   <input type="text" th:field="*{hashedPassword}" /></p>
-    <p><input type="submit" value="注册" /><input type="reset" value="重置" /></p>
+    <p>用户名:
+        <label>
+        <input type="text" th:field="*{username}" />
+        </label>
+    </p>
+    <p>密码:
+        <label>
+            <input type="text" th:field="*{hashedPassword}" />
+        </label>
+    </p>
+    <p>
+        <input type="submit" value="注册" />
+        <input type="reset" value="重置" />
+    </p>
 </form>
 </body>
 </html>
