--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
 
     <p>密码:
         <label>
-            <input type="text" th:field="*{hashedPassword}" />
+            <input type="text" th:field="*{password}" />
         </label>
     </p>
 
