--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,48 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="en-US">
+
 <head>
     <title>登录</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 </head>
-<body>
-<h1>用户登录</h1>
 
-<div th:if="${msg}">
-    <h1 th:text="${msg}"></h1>
-</div>
-<form action="#" th:action="@{/user/login}" th:object="${user}" method="post">
-    <p>用户名: <input type="text" th:field="*{username}" /> </p>
-    <p>密码: <input type="text" th:field="*{hashedPassword}" /></p>
-    <p>
-        <input type="submit" value="登录" />
-    </p>
-</form>
+<body style="background-color: lightseagreen">
 
-<form th:action="@{/user/register}" th:method="get">
-    <input type="submit" th:action="@{/user/register}" value="注册" />
-</form>
+    <div class="modal-dialog" style="margin-top: 10%;">
+        <div class="modal-content col-lg-10">
+            <div class="modal-header">
+                <h4 class="modal-title">Hadoop Netdisk</h4>
+            </div>
+            <div class="modal-body" id = "model-body">
+                <form action="#" th:action="@{/user/login}" th:object="${user}" method="post">
+                    <div class="form-group row">
+                        <div class="input-group col-lg-12">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">U</div>
+                            </div>
+                            <input type="text" class="form-control" th:field="*{username}" placeholder="用户名">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="input-group col-lg-12" style="margin-top: 16px;">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">P</div>
+                            </div>
+                            <input type="password" class="form-control" th:field="*{password}" placeholder="密码">
+                        </div>
+                    </div>
+                    <div class="form-group row float-right">
+                        <div class="form-inline" style="padding-right: 16px">
+                            <a class="btn-link" style="margin-right: 16px;" th:href="@{/user/register}">注册</a>
+                            <button type="submit" class="btn btn-primary">登录</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
