--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,29 +1,56 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="zh-cn">
+<html xmlns:th="http://www.thymeleaf.org" lang="en-US">
+
 <head>
-    <title>注册界面</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>注册</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 </head>
-<body>
-<h1>注册</h1>
 
-<form action="#" th:action="@{/user/register}" th:object="${user}" method="post">
-    <p>用户名:
-        <label>
-        <input type="text" th:field="*{username}" />
-        </label>
-    </p>
+<body style="background-color: lightseagreen">
 
-    <p>密码:
-        <label>
-            <input type="text" th:field="*{password}" />
-        </label>
-    </p>
+<div class="modal-dialog" style="margin-top: 10%;">
+    <div class="modal-content col-lg-10">
+        <div class="modal-header">
+            <h4 class="modal-title">Hadoop Netdisk Register</h4>
+        </div>
+        <div class="modal-body" id = "model-body">
+            <form action="#" th:action="@{/user/register}" th:object="${user}" method="post">
+                <div class="form-group row">
+                    <div class="input-group col-lg-12">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">U</div>
+                        </div>
+                        <input type="text" class="form-control" th:field="*{username}" placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="input-group col-lg-12" style="margin-top: 16px;">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">P</div>
+                        </div>
+                        <input type="password" class="form-control" th:field="*{password}" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="input-group col-lg-12" style="margin-top: 16px;">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">B</div>
+                        </div>
+                        <input type="text" class="form-control" th:field="*{bio}" placeholder="Bio">
+                    </div>
+                </div>
+                <div class="form-group row float-right">
+                    <div class="form-inline" style="padding-right: 16px">
+                        <a class="btn-link" style="margin-right: 16px;" th:href="@{/user/login}">登录</a>
+                        <button type="submit" class="btn btn-primary">注册</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <p>
-        <input type="submit" value="注册" />
-        <input type="reset" value="重置" />
-    </p>
-</form>
 </body>
 </html>
