--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,10 +18,6 @@
                 <a class="navbar-brand" th:href="@{/user/main}">Hadoop Netdisk</a>
             </div>
             <div class="collapse navbar-collapse justify-content-end">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -79,7 +75,7 @@
             </div>
         </div>
         <!-- Right File Manager -->
-        <div class="col-7">
+        <div class="col-10">
             <div class="card">
                 <div class="card-body">
                     <!-- File list -->
@@ -90,9 +86,9 @@
                                     <div class="col-9">
                                         <!-- Path breadcrumb -->
                                         <nav aria-label="breadcrumb">
-                                            <ol class="breadcrumb" th:each="path : ${pathList}">
-                                                <li class="breadcrumb-item">
-                                                    <a href="#" th:text="${path} + '>'"></a>
+                                            <ol class="breadcrumb">
+                                                <li class="breadcrumb-item" th:each="path : ${paths}">
+                                                    <a th:href="@{/file/chdir(desPath=${path[1]})}" th:text="${path[0]}"></a>
                                                 </li>
                                             </ol>
                                         </nav>
@@ -102,6 +98,8 @@
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mkdirModal">新建文件夹</button>
                                         <!-- Button trigger for uploadModal -->
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal">上传</button>
+                                        <!-- Button trigger for searchModal -->
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchModal">搜索</button>
 
                                         <!-- Upload Modal -->
                                         <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -133,11 +131,32 @@
                                                         </button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <form id="mkdir" th:action="@{/file/mkdir}" th:method="post" enctype="multipart/form-data">
+                                                        <form id="mkdir" th:action="@{/file/mkdir}" th:method="post">
                                                             <label>
                                                                 <input type="text" name="directory">
                                                             </label>
                                                             <button type="submit" class="btn btn-primary">确定</button>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Search modal -->
+                                        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title">搜索</h5>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <form id="search" th:action="@{/file/search}" th:method="post">
+                                                            <label>
+                                                                <input type="text" name="query">
+                                                            </label>
+                                                            <button type="submit" class="btn btn-primary">搜索</button>
                                                         </form>
                                                     </div>
                                                 </div>
@@ -154,7 +173,13 @@
                         </div>
                         <div class="row" th:each="hadoopFile : ${hadoopFileList}">
                             <div class="col-8">
-                                <p th:text="${hadoopFile.get('fileName')}"></p>
+                                <a th:if="${hadoopFile.get('isDir') == true}"
+                                   th:text="${hadoopFile.get('fileName')}"
+                                   th:href="@{/file/chdir(desPath=${currentPath + hadoopFile.get('fileName') + '/'})}">
+                                </a>
+                                <a th:if="${hadoopFile.get('isDir') == false}"
+                                   th:text="${hadoopFile.get('fileName')}">
+                                </a>
                             </div>
                             <div class="col-2">
                                 <p th:if="${hadoopFile.get('isDir') == true}">-</p>
@@ -167,28 +192,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="card">
-                <div class="card-header">热门分享文件</div>
-                <div class="card-body">
-                    <ul>
-                        <li>文件</li>
-                        <li>文件</li>
-                        <li>文件</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card" style="margin-top: 16px">
-                <div class="card-header">最近共享文件</div>
-                <div class="card-body">
-                    <ul>
-                        <li>文件</li>
-                        <li>文件</li>
-                        <li>文件</li>
-                    </ul>
                 </div>
             </div>
         </div>
